# Plume

./: .buildconfig  .codecov.yml  .dockerignore  .drone.jsonnet  .editorconfig  .env  .env.sample  .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  INSTALL.md  INTERNATIONALIZATION.md  ISSUE_TEMPLATE.md  README.md  build.rs  crowdin.yml  diesel.toml  flake.nix  plume-front.sh  plume.md  plume_tests  release.toml  rust-toolchain  set-environment  wasm-deps.sh
.cargo/: config.toml
.circleci/: config.yml  test.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: deploy-docker-latest.yaml  deploy-docker-tag.yaml  deploy-docker.yaml
doc/: PREREQUISITES.md
docs/: API.md  CLI.md  DEVELOPMENT.md  ENV-VARS.md  FEDERATION.md  INSTALL.md  INTERNATIONALIZATION.md  PREREQUISITES.md  README.md  UPDATE.md  api.yaml  docker-compose.sample.yml  docker.sample.env
js/: menu.js
migrations/2018-04-22-093322_create_instances/: up.sql
migrations/2018-04-23-111655_create_blog_authors/: up.sql
migrations/2018-04-30-170445_timestamps/: down.sql  up.sql
migrations/2018-05-01-124607_create_follow/: up.sql
migrations/2018-05-01-165325_add_ap_url/: up.sql
migrations/2018-05-03-182555_blogs_add_keys/: down.sql  up.sql
migrations/2018-05-09-192013_create_comments/: up.sql
migrations/2018-05-12-213456_likes_add_ap_url/: up.sql
migrations/2018-05-13-175144_users_add_shared_inbox/: down.sql  up.sql
migrations/2018-05-19-091428_create_reshares/: up.sql
migrations/2018-06-20-175532_create_mentions/: up.sql
migrations/2018-06-20-194538_add_mentions_ap_url/: down.sql
migrations/2018-07-25-165754_refactor_notifications/: down.sql
migrations/2018-07-27-102221_user_add_followers_endpoint/: down.sql
migrations/2018-07-27-125558_instance_customization/: up.sql
migrations/2018-07-27-194816_instance_description_html/: down.sql  up.sql
migrations/2018-09-02-111458_create_medias/: down.sql
migrations/2018-09-02-123623_medias_owner_id/: up.sql
migrations/2018-09-03-102510_users_add_avatar/: up.sql
migrations/2018-09-03-170848_user_add_last_fetched_date/: down.sql  up.sql
migrations/2018-09-04-103017_follows_add_ap_url/: up.sql
migrations/2018-09-05-174106_create_tags/: up.sql
migrations/2018-09-06-182637_posts_add_source/: down.sql
migrations/2018-09-07-212003_fix_avatar_deletion/: down.sql  up.sql
plume-api/: Cargo.toml
plume-api/src/: apps.rs  lib.rs  posts.rs
plume-cli/: Cargo.toml
plume-cli/src/: instance.rs  list.rs  main.rs  migration.rs  remove-dup-images.rs  search.rs  timeline.rs  users.rs
plume-common/: Cargo.toml  release.toml
plume-common/src/: lib.rs  utils.rs
plume-common/src/activity_pub/: inbox.rs  mod.rs  request.rs  sign.rs
plume-front/: Cargo.toml
plume-front/src/: editor.rs  i18n.rs  lib.rs  main.rs
plume-front/src/static/: index.html
plume-macro/: Cargo.toml  release.toml
plume-macro/src/: lib.rs
plume-models/: Cargo.toml  callgrind.out.25633  plume.db-journal  plume_tests.sqlite-journal  release.toml
plume-models/src/: .lib.rs.swp  admin.rs  api_tokens.rs  apps.rs  blacklisted_emails.rs  blocklisted_emails.rs  blog_authors.rs  blogs.rs  comment_seers.rs  comments.rs  config.rs  db_conn.rs  email_signups.rs  follows.rs  follows.rs.orig  headers.rs  inbox.rs  instance.rs  ldap.rs  lib.rs  likes.rs  lists.rs  medias.rs  mentions.rs  migrations.rs  notifications.rs  password_reset_requests.rs  plume_rocket.rs  post_authors.rs  posts.rs  remote_fetch_actor.rs  reshares.rs  safe_string.rs  schema.rs  search.rs  signups.rs  tags.rs  users.rs
plume-models/src/search/: actor.rs  mod.rs  query.rs  searcher.rs  tokenizer.rs
plume-models/src/timeline/: mod.rs  query.rs
plume-models/tests/: lib.rs
po/: LINGUAS  ar.po  de.po  de.po~  en.po  en.po~  es.po  fr.po  fr.po~  gl.po  gl.po~  it.po  it.po~  ja.po  ja.po~  nb.po  nb.po~  pl.po  pl.po~  plume.pot  pt_PT.po  ru.po  ru.po~
po/plume/: af.po  ar.po  bg.po  ca.po  cs.po  cy.po  da.po  de.po  de.po~  el.po  en.po  en.po~  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fr.po~  gl.po  gl.po~  he.po  hi.po  hr.po  hu.po  it.po  it.po~  ja.po  ja.po~  ko.po  nb.po  nb.po~  nl.po  no.po  pl.po  pl.po~  plume.pot  pt.po  ro.po  ru.po  (+12 more)
po/plume-front/: af.po  ar.po  bg.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en.po  en.po~  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fr.po~  gl.po  he.po  hi.po  hr.po  hu.po  it.po  ja.po  ko.po  nb.po  nl.po  no.po  pl.po  plume-front.pot  pt.po  ro.po  ru.po  sat.po  si.po  sk.po  sl.po  sr.po  sv.po  (+5 more)
script/: compute_coverage.sh  generate_artifact.sh  plume-front.sh  prebuild-in-docker.sh  prebuild.sh  run_browser_test.py  run_browser_test.sh  run_unit_test.sh  upload_coverage.sh  upload_coverages.sh  upload_test_environment.sh  wasm-deps.sh
script/browser_test/: instance.py  notifications.py  utils.py
search_index/: .managed.json  meta.json
snap/: snapcraft.yaml
snap/hooks/: configure  install  post-refresh
snap/local/: set-environment
src/: db_conn.rs  i18n.rs  inbox.rs  mail.rs  main.rs  safe_string.rs  schema.rs  setup.rs  template_utils.rs  test_routes.rs  utils.rs
src/activity_pub/: activity.rs  actor.rs  inbox.rs  mod.rs  object.rs  outbox.rs  request.rs  sign.rs  webfinger.rs
src/api/: apps.rs  authorization.rs  mod.rs  posts.rs
src/models/: blog_authors.rs  blogs.rs  comments.rs  follows.rs  instance.rs  likes.rs  mentions.rs  mod.rs  notifications.rs  post.rs  post_authors.rs  posts.rs  reshares.rs  user.rs  users.rs
src/routes/: blogs.rs  comments.rs  email_signups.rs  errors.rs  instance.rs  likes.rs  medias.rs  mod.rs  notifications.rs  posts.rs  reshares.rs  search.rs  session.rs  tags.5D8X1y  tags.Ci8QxB  tags.Tzkkc3  tags.epUzCL  tags.p8lf7X  tags.rs  timelines.rs  user.rs  well_known.rs
static/: main.css  plume-front.js
static/css/: _forms.scss  (+9 more)
templates/: base.html.tera  base.rs.html  base.tera  macros.html.tera  macros.tera  remote_interact_base.rs.html
(+315 files in other folders)
