[package]
name = "plume-cli"
version = "0.6.0"
authors = ["Plume contributors"]
edition = "2018"

[[bin]]
name = "plm"
path = "src/main.rs"

[dependencies]
clap = "2.33"
dotenv = "0.14"
rpassword = "4.0"

[dependencies.diesel]
features = ["r2d2", "chrono"]
version = "*"

[dependencies.plume-models]
path = "../plume-models"

[features]
postgres = ["plume-models/postgres", "diesel/postgres"]
sqlite = ["plume-models/sqlite", "diesel/sqlite"]
search-lindera = ["plume-models/search-lindera"]
