[package]
name = "plume-front"
version = "0.6.1-dev"
authors = ["Plume contributors"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
gettext = { git = "https://github.com/Plume-org/gettext/", rev = "294c54d74c699fbc66502b480a37cc66c1daa7f3" }
gettext-macros = { git = "https://github.com/Plume-org/gettext-macros/", rev = "a7c605f7edd6bfbfbfe7778026bfefd88d82db10" }
gettext-utils = { git = "https://github.com/Plume-org/gettext-macros/", rev = "a7c605f7edd6bfbfbfe7778026bfefd88d82db10" }
lazy_static = "1.3"
serde = "1.0"
serde_json = "1.0"
wasm-bindgen = "0.2.70"
js-sys = "0.3.47"
serde_derive = "1.0.123"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.47"
features = [
  'console',
  'ClipboardEvent',
  'CssStyleDeclaration',
  'DataTransfer',
  'Document',
  'DomStringMap',
  'DomTokenList',
  'Element',
  'EventTarget',
  'FocusEvent',
  'History',
  'HtmlAnchorElement',
  'HtmlDocument',
  'HtmlFormElement',
  'HtmlInputElement',
  'HtmlSelectElement',
  'HtmlTextAreaElement',
  'KeyboardEvent',
  'Storage',
  'Location',
  'MouseEvent',
  'Navigator',
  'Node',
  'NodeList',
  'Text',
  'TouchEvent',
  'Window'
]
