[package]
name = "plume-front"
version = "0.7.2"
authors = ["Plume contributors"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
gettext = "0.4.0"
gettext-macros = "0.6.1"
gettext-utils = "0.1.0"
lazy_static = "1.3"
serde = "1.0.137"
serde_json = "1.0"
wasm-bindgen = "0.2.81"
js-sys = "0.3.58"
serde_derive = "1.0.123"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.58"
features = [
  'console',
  'ClipboardEvent',
  'CssStyleDeclaration',
  'DataTransfer',
  'Document',
  'DomStringMap',
  'DomTokenList',
  'Element',
  'EventTarget',
  'FocusEvent',
  'History',
  'HtmlAnchorElement',
  'HtmlDocument',
  'HtmlFormElement',
  'HtmlInputElement',
  'HtmlSelectElement',
  'HtmlTextAreaElement',
  'KeyboardEvent',
  'Storage',
  'Location',
  'MouseEvent',
  'Navigator',
  'Node',
  'NodeList',
  'Text',
  'TouchEvent',
  'Window'
]
