[package]
name = "plume-macro"
version = "0.1.0"
authors = ["Trinity Pointard <trinity.pointard@insa-rennes.fr>"]
edition = "2018"
description = "Plume procedural macros"
license = "AGPLv3"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6.12"
syn = "0.11.4"


[features]
default = []
postgres = []
sqlite = []
