[package]
name = "plume-macro"
version = "0.6.1-dev"
authors = ["Trinity Pointard <trinity.pointard@insa-rennes.fr>"]
edition = "2018"
description = "Plume procedural macros"
license = "AGPLv3"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6.12"
syn = "0.15.27"


[features]
default = []
postgres = []
sqlite = []
