[package]
name = "plume-models"
version = "0.7.2"
authors = ["Plume contributors"]
edition = "2018"

[dependencies]
ammonia = "3.2.0"
bcrypt = "0.12.1"
guid-create = "0.2"
itertools = "0.10.3"
lazy_static = "1.0"
ldap3 = "0.10.4"
migrations_internals= "1.4.0"
openssl = "0.10.40"
rocket = "0.4.6"
rocket_i18n = "0.4.1"
reqwest = "0.11.10"
scheduled-thread-pool = "0.2.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.81"
tantivy = "0.13.3"
url = "2.1"
walkdir = "2.2"
webfinger = "0.4.1"
whatlang = "0.16.0"
shrinkwraprs = "0.3.0"
diesel-derive-newtype = "1.0.0"
glob = "0.3.0"
lindera-tantivy = { version = "0.7.1", optional = true }
tracing = "0.1.34"
riker = "0.4.2"
once_cell = "1.10.0"
lettre = "0.9.6"
native-tls = "0.2.10"
activitystreams = "0.7.0-alpha.18"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.diesel]
features = ["r2d2", "chrono"]
version = "1.4.5"

[dependencies.plume-api]
path = "../plume-api"

[dependencies.plume-common]
path = "../plume-common"

[dependencies.plume-macro]
path = "../plume-macro"

[dev-dependencies]
assert-json-diff = "2.0.1"
diesel_migrations = "1.3.0"

[features]
postgres = ["diesel/postgres", "plume-macro/postgres" ]
sqlite = ["diesel/sqlite", "plume-macro/sqlite" ]
search-lindera = ["lindera-tantivy"]
